add: Fancybox component

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fancyapps/ui": "^5.0.33",
     "@headlessui/react": "^1.7.17",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
