--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@vercel/analytics": "^1.2.2",
     "add-to-calendar-button-react": "^2.4.3",
     "animate.css": "^4.1.1",
     "autoprefixer": "10.4.16",
