--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "add-to-calendar-button-react": "^2.4.3",
     "animate.css": "^4.1.1",
     "autoprefixer": "10.4.16",
